k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cis-ops
  labels:
    name: cis-ops
    app.kubernetes.io/name: cis-ops
    app.kubernetes.io/managed-by: argocd
