k8s/manifests/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: cis-ops
  labels:
    app: postgres-exporter
spec:
  selector:
    app: postgres-exporter
  ports:
  - name: metrics
    port: 9187
    targetPort: 9187
    protocol: TCP
